# nanoGPT-from-scratch

./: .gitignore  README.md  pyproject.toml
docs/: 00_plan.md  01_architecture.md  02_dataset.md  03_tokenization.md  04_embeddings.md  05_positional_encoding.md  06_self_attention.md  07_multi_head_attention.md  08_feed_forward.md  09_layernorm_residual.md  10_transformer_block.md  11_gpt_model.md  12_training.md  13_sampling.md  14_web_visualizer.md  README.md
docs/assets/: README.md
scripts/: check_assets.py  check_setup.py  prepare_data.py
src/nanogpt/: __init__.py  attention.py  block.py  config.py  data.py  embeddings.py  feed_forward.py  generate.py  layer_norm.py  model.py  multi_head_attention.py  positional_encoding.py  tokenizer.py  train.py
tests/: test_attention.py  test_block.py  test_config.py  test_data.py  test_embeddings.py  test_feed_forward.py  test_generate.py  test_layer_norm.py  test_model.py  test_multi_head_attention.py  test_positional_encoding.py  test_train.py
web/: README.md  app.js  index.html  styles.css
web/widgets/: 03_tokenization.js  04_embeddings.js  05_positional_encoding.js  06_self_attention.js  07_multi_head_attention.js  08_feed_forward.js  09_layernorm_residual.js  10_transformer_block.js  11_gpt_model.js  _util.js
