[project]
name = "nanogpt-from-scratch"
version = "0.1.0"
description = "A decoder-only GPT built one component per file, with rigorous math notes and interactive diagrams."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.6.0",
    "numpy>=2.1.0",
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",
    "scikit-learn>=1.7.2",
    "truststore>=0.10.4",
    "wandb>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nanogpt"]

# Use the system certificate store (fixes "UnknownIssuer" TLS errors behind
# SSL-inspecting proxies / antivirus on corporate networks).
[tool.uv]
native-tls = true

# PyTorch with CUDA 12.4 wheels (works with your CUDA 13.1 driver — newer drivers are
# forward-compatible). To switch CUDA versions, change cu124 below and re-run `uv sync`.
[tool.uv.sources]
torch = [{ index = "pytorch-cu124" }]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
